[tool.poetry]
name = "tracerIP"
version = "0.1.0"
description = ""
authors = ["Armin Aminian <rmin.aminian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
kopf = "^1.35.2"
kubernetes = "^19.15.0"
pymongo = "^3.12.1"
netaddr = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
